header and footer changed, fixed name alignment

--- a/frontend/src/styles/_aepp-list.scss
+++ b/frontend/src/styles/_aepp-list.scss
@@ -52,7 +52,8 @@
 
   @media screen and (min-width: 768px) {
     font-size: 1.4em;
-    text-align: center;
+    text-align: start;
+    padding-left: 30%;
   }
 }
 
