--- a/frontend/src/styles/_footer.scss
+++ b/frontend/src/styles/_footer.scss
@@ -9,4 +9,8 @@
   .text-footer {
     font-size: 0.8em;
   }
+
+  .link-footer {
+    color: $text-color;
+  }
 }
