--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -1,21 +1,18 @@
 .header {
-  height: 12%;
-  padding: 0rem 3rem;
+  padding: 0 3rem;
   display: flex;
   justify-content: center;
 
-  .logo-desktop {
-    display: none;
-
+  .logo {
     @media screen and (min-width: 768px) {
       display: block;
       margin-right: auto;
     }
-  }
 
-  .logo-mobile {
-    @media screen and (min-width: 768px) {
-      display: none;
+    @media screen and (min-width: 2560px) {
+      display: block;
+      margin-right: auto;
+      margin-left: 5%;
     }
   }
 }
